--- a/index.html
+++ b/index.html
@@ -1,18 +1,31 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>my-portfolio</title>
-    <style>
-      body{
-        background-color:  #16142B;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>my-portfolio</title>
+  <style>
+    body {
+      background-color: #16142B;
+    }
+  </style>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+  </script>
+  <script type="text/javascript">
+    (function () {
+      emailjs.init({
+        publicKey: "WRHu0LtPKUJ_TDxqa",
+      });
+    })();
+  </script>
+  <script type="module" src="/src/main.jsx"></script>
+  
+</body>
+
 </html>
